More WIP stuff for the AgeUK alamanac validation

--- a/FEM_R/model_analysis.Rmd
+++ b/FEM_R/model_analysis.Rmd
@@ -549,6 +549,10 @@ mf_list <- tmp(mFEM, fFEM, 60:64)
 male <- list(male, mf_list[1])
 female <- list(female, mf_list[2])
 
+mf_list <- tmp(mFEM, fFEM, 65:69)
+male <- list(male, mf_list[1])
+female <- list(female, mf_list[2])
+
 ```
 
 
